--- a/package.json
+++ b/package.json
@@ -2,16 +2,11 @@
   "name": "angular-material-components",
   "version": "0.0.0",
   "scripts": {
-    "ng": "ng",    
-    "start": "node server.js",
+    "ng": "ng",
+    "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "heroku-postbuild": "ng build"
-  },
-  "engines": {
-    "node": "16.15.0",
-    "npm": "8.5.5"
+    "test": "ng test"
   },
   "private": true,
   "dependencies": {
